Update profile picture in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="card">
-        <img class="profile-pic" src="404430960_1145547826429401_4688063152812325674_n.webp" alt="Profile Picture">
+        <img class="profile-pic" src="WhatsApp Image 2026-02-10 at 4.19.05 AM.jpeg" alt="Profile Picture">
         <h2>MOAZ_MAGDY</h2>
         <p>Full Stack Developer</p>
         <div class="contact-icons">
