--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
         </div>
         <div class="social-links">
-            <a href="https://www.instagram.com/mo3z_magdy19?igsh=YTNnbDBlYno2bXZ2&utm_source=qr" target="_blank" class="social-btn">Instagram</a>
+            <a href="https://www.instagram.com/moa3z_magdy19?igsh=YTNnbDBlYno2bXZ2&utm_source=qr" target="_blank" class="social-btn">Instagram</a>
             <a href="http://linkedin.com/in/moaz-magdy-23a965239" target="_blank" class="social-btn">LinkedIn</a>
             <a href="https://github.com/MoazMagdy19" target="_blank" class="social-btn">GitHub</a>
             <a href="https://www.facebook.com/moaz.magdy.7393?mibextid=LQQJ4d" target="_blank" class="social-btn">Facebook</a>
